@@ -410,7 +410,7 @@
         <include name="external/${logging-minimal.jar}"/>
         <include name="release/${opendap.jar}"/>
         <include name="external/${protobuf.jar}"/>
-        <include name="external/${bdb.jar}"/>
+        <!-- include name="external/${bdb.jar}"/ -->
       </fileset>
     </unzip>
     <unzip dest="${idv.dir}">
