@@ -2,7 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>CF encoding Table</title></head>
+<title>CF encoding Table</title>
+</head>
 
 <body>
 <table width="1565" height="758" border="1">
@@ -56,7 +57,7 @@ lat,lon</strong>,stn_alt(obs)
 <strong>time</strong>,<strong>lat,lon</strong>,z(obs)
 scalar <strong>traj_id</strong>      </pre></td>
     <td>      <pre>data(traj,obs)<strong>
-time</strong>,<strong>lat,lon</strong>,z(traj,obs)
+time</strong>,<strong>lat,lon</strong>,z(traj,obs) | <strong>time</strong>(time)
 <strong>traj_id</strong>(traj)     </pre>    </td>
     <td>      <pre>data(obs)
 <strong>time</strong>,<strong>lat,lon</strong>,z(obs)
