@@ -308,7 +308,8 @@ public final class GribGridRecord implements GridRecord {
       if (edition == 1) {
         result += result * 37 + getLevelType1();
         result += result * 37 + getParameterName().hashCode();
-        if (isInterval()) result += result * 37 + getStatisticalProcessTypeName().hashCode();
+        String statName = getStatisticalProcessTypeName();
+        if (statName != null) result += result * 37 + statName.hashCode();
 
       } else {
         Grib2Pds pds2 = (Grib2Pds) pds;
